--- a/src/Components/Main/Content/Content.css
+++ b/src/Components/Main/Content/Content.css
@@ -16,9 +16,9 @@
     padding-top: 10px;
     padding-bottom: 90px;
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
     background-color: rgba(240, 255, 255, 0.521);
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 1;
