--- a/src/Components/Main/Content/NoteList/NoteList.css
+++ b/src/Components/Main/Content/NoteList/NoteList.css
@@ -1,6 +1,18 @@
 .noteList{
-    background-color: rgb(146, 148, 9);
+    font-family: "Roboto Mono", monospace;
+    font-weight: bold;
+    background-color: #F5EFE7;
+    display: flex;
+    flex-direction: column;
+    padding: 10px 20px 100px;
+}
+.noteList .currentPage_info{
+    color: #213555;
+}
+.noteList .notes_holder{
     display: flex;
     flex-wrap: wrap;
-    padding: 10px;
+    gap: 10px;
+    padding: 0px 10px;
+    justify-content: space-evenly;
 }
